--- a/CSS Selectors/index.html
+++ b/CSS Selectors/index.html
@@ -1,68 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <style>
-        /* element selector */
-        div{
-            background-color: yellowgreen;
-        }
-        /* class selector */
-        .yellow{
-            background-color: yellow;
-        }
-        /* id selectors */
-        #green{
-            background-color: brown;
-        }
-
-        /* child selectors */
-        div>p{
-            color: red;
-            background-color: yellow;
-
-        }
-
-        /* descendent selector */
-        div p {
-            
-            background-color: wheat;
-            color: black;
-        }
-
-        /* universal selector */
-
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        /* pseudo selector */
-        a :visited{
-            color: purple;
-            /* colour will change after visiting the link */
-        }
-
-        a link{
-            color: blue;
-            /* color of link before visiting it */
-        }
-
-        a :active{
-
-            background-color: pink;
-            /* color when we are clicking it it */
-        }
-
-        a:hover{
-
-            background-color: yellow;
-            /* when we hover over a link */
-        }
-
-    </style>
+   
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
